# UTCP

./: .gitignore  CMakeLists.txt  README.md  ToDo.md  connector.cpp  connector.h  crc.cpp  crc.h  data.cpp  data.h  fileFragment.cpp  fileFragment.h  fragmentator.cpp  fragmentator.h  main.cpp  queues.cpp  receiver.cpp  receiver.h  script.lua  sender.cpp  sender.h  socket.cpp  socket.h  structs.cpp  structs.hpp  temp.cpp  temp1.cpp  types.h
files/: algoritms.py  code.txt  copy.py  failed.txt  main.py  words.json  words.txt
